src/styles/Components.scss
/* ... */
.speaker-divider {
  width: 100%;
  height: 1px;
  border: 0.5px solid var(--color-border);
}

.speaker-sessions {
  padding-top: 0 !important;
}
.sessions-section {
    font-weight: 600;
    font-size: 1em;
}
.group-tags .single-tag p {
   color: var(--color-dark);
   font-size: 0.7em;
   font-weight: 500;
}

/* ------------------------- Filters -------------------------------------------------- */

.filter-group {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
   gap: 0.25em;
}

.filter-group .single-filter {
   border: 1px solid var(--color-border);
   border-radius: var(--border-radius);
   padding: 0.45em 0.9em;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: var(--animation-primary);
   background-color: rgba(var(--color-dark-rgb), 0);
}

[data-theme-section="dark"] .filter-group .single-filter {
   background-color: rgba(var(--color-light-rgb), 0);
   border: 1px solid var(--color-border-light);
}

.filter-group .single-filter:hover {
   background-color: rgba(var(--color-dark-rgb), 0.1);
}

[data-theme-section="dark"] .filter-group .single-filter:hover {
   background-color: rgba(var(--color-light-rgb), 0.1);
}

.filter-group .single-filter span {
   color: var(--color-dark);
   font-size: 0.85em;
   font-weight: 400;
   transition: var(--animation-primary);
}

[data-theme-section="dark"] .filter-group .single-filter span {
   color: var(--color-light);
}

/* Active */

.filter-group .single-filter[data-filter-status="active"] {
   background-color: var(--color-primary) !important;
   border: 1px solid var(--color-primary) !important;
}

.filter-group .single-filter[data-filter-status="active"] span {
  color: var(--color-dark) !important;
}

@media screen and (max-width: 540px) {

   .filter-group .single-filter {
      padding: 0.4em 0.7em;
   }

   .filter-group .single-filter span {
      font-size: 0.75em;
   }
}

.date-wrapper {
  display: inline-flex;  
  border: 1px solid var(--color-border);;
  border-radius: var(--border-radius);
}

.date-wrapper > .single-filter {
  border: 1px solid transparent;
}
.date-wrapper > .single-filter.dateselected {
  background-color: var(--color-dark);
  &>span {
    color: var(--color-light);
  }
}

.date-divider {
    width: 1px;
    height: 40px;
    background-color: var(--color-border);
    margin: 0 24px;
}
 .date-outerwrap {
      width: 100%;
       padding-bottom: var(--row-gap);
       border-bottom: 1px solid var(--color-border);
        margin-bottom: var(--row-gap);
   }
  .date-divider {
    display: none;
  }
  .datefw {
    width: 100%;
  }


/* ------------------------- Filter Box -------------------------------------------------- */

.filter-alpha-animate {
   opacity: 0;
   visibility: hidden;
}

.filter-container {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   overflow: hidden;
   z-index: 400;
   display: flex;
   justify-content: center;
   align-items: center;
   pointer-events: none;
   padding: var(--container-padding);
   display: none;
}

.filter-container * {
   pointer-events: all;
}

.filter-container .close {
   position: absolute;
   top: var(--container-padding);
   right: var(--container-padding);
}

.filter-container .filter-box {
   background-color: var(--color-lightgray);
   border-radius: var(--border-radius);
   max-width: 20em;
   padding: var(--container-padding);
   transform: translateY(2em) rotate(0.001deg);
   opacity: 0;
   transition: var(--animation-primary);
   display: flex;
   flex-direction: column;
   gap: 0.5em;
   visibility: hidden;
}

.filter-container .filter-box p {
   opacity: 0.75;
   font-weight: 500;
}

[data-nav-filter-status="active"] .filter-container .filter-box{
   transform: translateY(0em) rotate(0.001deg);
   opacity: 1;
   visibility: visible;
}

.filter-container .overlay-dark {
   opacity: 0;
   visibility: hidden;
   transition: var(--animation-primary);
   background-color: rgba(var(--color-dark-rgb), 0.9);
}

[data-nav-filter-status="active"] .filter-container .overlay-dark {
   opacity: 1;
   visibility: visible;
}

@media screen and (max-width: 1070px) {
   .filter-container {
      display: flex;
   }
}


/* ------------------------- Filter Grid -------------------------------------------------- */

[data-filter-section] {
   padding-top: 0;
}

[data-filter-section] .row-filter {
   padding-top: var(--row-gap);
   align-items: center;
}

[data-filter-grid] [data-filter-status="not-active"] {
   display: none;
}

[data-filter-grid] {
	transform: translateY(0em) rotate(0.001deg);
   transition: opacity .2s ease-out, transform 1.2s cubic-bezier(0.16, 1, 0.3, 1);
}

[data-filter-grid].toggle-fade-out {
	opacity: 0;
	transform: translateY(0.5em) rotate(0.001deg);;
	transition: opacity .2s ease-in, transform 0.2s cubic-bezier(0.7, 0, 0.84, 0);
}
 
[data-filter-grid].toggle-fade-in {
	opacity: 0;
	transform: translateY(var(--row-gap)) rotate(0.001deg);
}

/* ------------------------- Card Logo -------------------------------------------------- */

.boxed-logo {
   background-color: var(--color-light);
   border-radius: 50%;
   width: var(--title-size);
   height: var(--title-size);
   display: flex;
   align-items: center;
   justify-content: center;
}

.boxed-logo > * {
   max-width: 100%;
   width: 100%;
}
.boxed-logo > img {
   border-radius: 14px;
}

.boxed-logo.xll > * { max-width: 90%; }
.boxed-logo.xl > * { max-width: 70%; }
.boxed-logo.l > * { max-width: 60%; }
.boxed-logo.m > * { max-width: 47.5%; }
.boxed-logo.s > * { max-width: 40%; }
.boxed-logo.xs > * { max-width: 30%;}
.boxed-logo.xxs > * { max-width: 20%;}

/* ------------------------- Single Speakers Card -------------------------------------------------- */

.single-speakers-card {
   position: relative;
   display: flex;
   flex-direction: column;
   gap: 1.25em;
   cursor: pointer;
}

.flickity-slide > .single-speakers-card {
   cursor: grab;
}
/* ... */

